WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
116157
WebKit doesn't support MSVS2003 any more, remove preprocessor checks for older versions.
https://bugs.webkit.org/show_bug.cgi?id=116157
Summary
WebKit doesn't support MSVS2003 any more, remove preprocessor checks for olde...
Nico Weber
Reported
2013-05-15 09:14:49 PDT
WebKit requires MSVS2010 now, remove preprocessor checks for older versions.
Attachments
Patch
(10.81 KB, patch)
2013-05-15 09:17 PDT
,
Nico Weber
no flags
Details
Formatted Diff
Diff
Patch
(10.20 KB, patch)
2013-05-15 09:24 PDT
,
Nico Weber
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Nico Weber
Comment 1
2013-05-15 09:17:17 PDT
Created
attachment 201841
[details]
Patch
Nico Weber
Comment 2
2013-05-15 09:24:39 PDT
Created
attachment 201844
[details]
Patch
WebKit Commit Bot
Comment 3
2013-05-15 12:11:30 PDT
Comment on
attachment 201844
[details]
Patch Clearing flags on attachment: 201844 Committed
r150134
: <
http://trac.webkit.org/changeset/150134
>
WebKit Commit Bot
Comment 4
2013-05-15 12:11:33 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug