WebKit doesn't support MSVS2003 any more, remove preprocessor checks for older versions. https://bugs.webkit.org/show_bug.cgi?id=116157

Reviewed by Anders Carlsson.

Also remove a gcc3.2 workaround.

Merges parts of these two commits by the talented Nico Weber:
https://chromium.googlesource.com/chromium/blink/+/3677e2f47348daeff405a40b6f90fbdf0654c2f5
https://chromium.googlesource.com/chromium/blink/+/0fcd96c448dc30be1416dcc15713c53710c1a312

Source/JavaScriptCore:

* os-win32/inttypes.h:

Source/WTF:

* wtf/Alignment.h:
(WTF):
* wtf/Assertions.h:
* wtf/Atomics.h:
(WTF):
* wtf/Compiler.h:
* wtf/DateMath.cpp:
(WTF::getLocalTime):
* wtf/MathExtras.h:
* wtf/RefCountedLeakCounter.h:
(RefCountedLeakCounter):
* wtf/StaticConstructors.h:


Canonical link: https://commits.webkit.org/134565@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150134 268f45cc-cd09-0410-ab3c-d52691b4dbfc