Source/WTF/wtf/Alignment.h
@@ -38,7 +38,7 @@ namespace WTF {
     #error WTF_ALIGN macros need alignment control.
 #endif
 
-#if COMPILER(GCC) && !COMPILER(INTEL) && (((__GNUC__ * 100) + __GNUC_MINOR__) >= 303)
+#if COMPILER(GCC) && !COMPILER(INTEL)
     typedef char __attribute__((__may_alias__)) AlignedBufferChar; 
 #else
     typedef char AlignedBufferChar; 
