Source/WTF/wtf/DateMath.cpp
@@ -135,7 +135,7 @@ static const int firstDayOfMonth[2][12] = {
 #if !OS(WINCE)
 static inline void getLocalTime(const time_t* localTime, struct tm* localTM)
 {
-#if COMPILER(MSVC7_OR_LOWER) || COMPILER(MINGW)
+#if COMPILER(MINGW)
     *localTM = *localtime(localTime);
 #elif COMPILER(MSVC)
     localtime_s(localTM, localTime);
