Source/WTF/wtf/StaticConstructors.h
@@ -51,24 +51,14 @@
 
 #ifndef SKIP_STATIC_CONSTRUCTORS_ON_GCC
     // Define an global in the normal way.
-#if COMPILER(MSVC7_OR_LOWER)
-#define DEFINE_GLOBAL(type, name) \
-    const type name;
-#else
 #define DEFINE_GLOBAL(type, name, ...) \
     const type name;
-#endif
 
 #else
 // Define an correctly-sized array of pointers to avoid static initialization.
 // Use an array of pointers instead of an array of char in case there is some alignment issue.
-#if COMPILER(MSVC7_OR_LOWER)
-#define DEFINE_GLOBAL(type, name) \
-    void * name[(sizeof(type) + sizeof(void *) - 1) / sizeof(void *)];
-#else
 #define DEFINE_GLOBAL(type, name, ...) \
     void * name[(sizeof(type) + sizeof(void *) - 1) / sizeof(void *)];
-#endif
 #endif
 
 #endif // StaticConstructors_h
